# web_scraping

./: .gitignore
book_scraper/: main.py  pyproject.toml
jd_sports_scraper/: main.py  pyproject.toml
jd_sports_scraper/src/: notebook.ipynb  scraper.py
noon_scraper/: main.py  pyproject.toml
