[project]
name = "jd-sports-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=2.0.0",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pyarrow>=14.0.0",
    "pyspark>=4.1.1",
    "requests>=2.33.1",
]
